tests/tests/checks/snapshots/analysis/cpp/check_glob@cpp__big_cpp_cpp__include_big_header__prodjson.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "NORM:9-23",
    "source": 1,
    "syntax": "use,file",
    "pretty": "file big_header.h",
    "sym": "FILE_big_header@2Eh"
  },
  {
    "loc": "NORM:9-23",
    "target": 1,
    "kind": "use",
    "pretty": "big_header.h",
    "sym": "FILE_big_header@2Eh"
  }
]
